# cedhtools

./: .gitignore  README.md  TODO.md  all_mvs.sql  braindump.txt  card_color_identity_relationships.sql  card_synergy_statistics.sql  commander_deck_relationships.sql  commander_matchup_statistics.sql  ecosystem.config.js  ideas.txt  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  raw_data.txt  refactor_plan.md  tournament.json
api/: .dockerignore  .gitignore  Cargo.toml  README.md  manage.py  package-lock.json  package.json  requirements.txt  tsconfig.json
api/cedhtools/: README.md  asgi.py  settings.py  urls.py  wsgi.py
api/cedhtools_backend/: admin.py  apps.py  models.py  serializers.py  services.py
api/cedhtools_backend/api/: urls.py  views.py
api/cedhtools_backend/constants/: __init__.py  api_constants.py
api/cedhtools_backend/migrations/: 0001_initial.py  0002_alter_playerstanding_decklist.py  0002_remove_topdeckplayerstanding_draws_and_more.py  0002_scryfallcard_uri.py  0003_alter_scryfallcardface_cmc.py  0003_create_cedhtoolsmetrics_materializedview.py  0003_delete_playerstanding_delete_tournament.py  0003_remove_moxfielddeck_name.py  0004_create_card_stats_mv.py  (+53 more)
api/cedhtools_backend/migrations.old/: 0001_initial.py  0002_scryfallcard_collector_number_and_more.py  0003_create_cedhtoolsmetrics_materializedview.py  0005_cardstatisticsbycommander_cedhtoolsmetrics_and_more.py  0007_cardprintings.py  0013_update_commander_meta_statistics.py  0016_cardstatisticsbycommanderfiltered_and_more.py
api/src/: main.rs  schema.ts  server.ts
(+797 files in other folders)
