[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.1"
bson = { version = "2.0", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
